[metadata]
name = reverse-geocode-bd
version = 1.0.3
author = Shakhrul Iman Siam
author_email = shakhrulsiam268@gmail.com
description = 'Offline reverse geocoder for Bangladesh Map'
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ShakhrulSiam268/reverse_geocode_bd
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
include_package_data = True
